[package]
name = "rblog"
version = "0.1.0"
edition = "2018"

[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }
chrono = "0.4"
handlebars = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
structopt = { version = "0.3", default-features = false }
